--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
+<!DOCTYPE html>
 <html>
+
     <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Home | Hasibul's Blog</title>
+        <meta charset="utf-8">
+        <title>My Portfolio</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+            integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
-        <div class="container">
-            <h1>Assalamu-alikum</h1>
-        </div>
-    </body>
-</html>
+        <header class="bg-dark text-white py-3">
+            <div class="container">
+                <h1 class="text-center">My Portfolio</h1>
+            </div>
+        </header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <main>
+            <section id="about" class="py-5">
+                <div class="container">
+                    <h2>About Me</h2>
+                    <p>
+                        Hi, my name is [Name] and I am a [Job Title] with [Number] years of experience in the field.
+                        I have a strong background in [Skill] and have worked on a variety of projects using
+                        [Technology].
+                        In my free time, I enjoy [Hobby] and am always looking for new challenges to tackle.
+                    </p>
+                </div>
+            </section>
+            <section id="projects" class="py-5">
+                <div class="container">
+                    <h2>Projects</h2>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h3>Project 1</h3>
+                            <p>
+                                [Description of project]
+                            </p>
+                            <a href="#" class="btn btn-primary">View project</a>
+                        </div>
+                        <div class="col-md-6">
+                            <h3>Project 2</h3>
+                            <p>
+                                [Description of project]
+                            </p>
+                            <a href="#" class="btn btn-primary">View project</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="contact" class="py-5">
+                <div class="container">
+                    <h2>Contact</h2>
+
+                </div>
+            </section>
