--- a/about.html
+++ b/about.html
@@ -4,15 +4,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home | Hasibul's Blog</title>
-        <link rel="shortcut icon" type="image" href="./img/general/home-fav-icon.png">
-        <link rel="stylesheet" href="./css/general/style.css">
     </head>
     <body>
         <div class="container">
             <nav class="nav-bar">
-                <div class="home-logo">
-                    <img class="logo" src="./img/general/logo.PNG" alt="Home logo">
-                </div>
                 <ul class="navbar-nav">
                     <li class="nav-link">
                         <a href="./">Home</a>
@@ -21,10 +16,10 @@
                         <a href="./about">About</a>
                     </li>
                     <li class="nav-link">
-                        <a href="./blogs/general/categories">Categories</a>
+                        <a href="./">Categories</a>
                     </li>
                     <li class="nav-link">
-                        <a href="./blogs/general/contact">Contact</a>
+                        <a href="./">Contact</a>
                     </li>
                 </ul>
             </nav>
