Adding hover effect
Hover effect on each navbar elements and also adding active status

--- a/blogs/general/categories.html
+++ b/blogs/general/categories.html
@@ -22,16 +22,16 @@
                     </div>
                     <ul class="my-navbar-nav">
                         <li class="my-nav-link">
-                            <a href="../../">Home</a>
+                            <a class="hover" href="../../">Home</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="../../about.html">About</a>
+                            <a class="hover" href="../../about.html">About Me</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./">Categories</a>
+                            <a class="hover active" href="./">Categories</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./contact.html">Contact</a>
+                            <a class="hover" href="./contact.html">Contact</a>
                         </li>
                     </ul>
                 </nav>
