--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                     </div>
                     <ul class="my-navbar-nav">
                         <li class="my-nav-link">
-                            <a href="./">Home</a>
+                            <a class="hover active" href="./">Home</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./about.html">About</a>
+                            <a class="hover" href="./about.html">About Me</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./blogs/general/categories.html">Categories</a>
+                            <a class="hover" href="./blogs/general/categories.html">Categories</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./blogs/general/contact.html">Contact</a>
+                            <a class="hover" href="./blogs/general/contact.html">Contact</a>
                         </li>
                     </ul>
                 </nav>
