--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -20,16 +20,16 @@
                     </div>
                     <ul class="my-navbar-nav">
                         <li class="my-nav-link">
-                            <a href="../../">Home</a>
+                            <a class="hover" href="../../">Home</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="../../about.html">About</a>
+                            <a class="hover" href="../../about.html">About Me</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./categories.html">Categories</a>
+                            <a class="hover" href="./categories.html">Categories</a>
                         </li>
                         <li class="my-nav-link">
-                            <a href="./">Contact</a>
+                            <a class="hover active" href="./">Contact</a>
                         </li>
                     </ul>
                 </nav>
