--- a/index.html
+++ b/index.html
@@ -17,29 +17,36 @@
     <body>
         <div class="wrapper">
             <header class="container san navbar">
-                <nav class="my-nav-bar">
+                <nav class="navbar">
                     <div class="home-logo">
                         <img class="logo" src="./img/general/logo.PNG" alt="Home logo">
                     </div>
-                    <ul class="my-navbar-nav">
-                        <li class="my-nav-link">
-                            <a class="hover active" href="./">Home</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover" href="./about.html">About Me</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover" href="./blogs/general/categories.html">Categories</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover" href="./blogs/general/contact.html">Contact</a>
-                        </li>
-                    </ul>
+                    <a href="#" class="navbar-toggle">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+                    <div class="navbar-links">
+                        <ul>
+                            <li class="nav-link">
+                                <a class="hover active" href="./">Home</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover" href="./about.html">About Me</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover" href="./blogs/general/categories.html">Categories</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover" href="./blogs/general/contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
             </header>
             <main class="container">
-                <div class="flexing hero-section">
-                    <div class="left">
+                <div class="hero-section">
+                    <div class="block-1">
                         <h1 class="serif large">Welcome to my Diary</h1>
                         <p class="san small">
                             The best way to know about someone is to read his/her Diary!
@@ -50,7 +57,7 @@
                             <a href="./about.html" class="serif small italic">Who am I?</a>
                         </div>
                     </div>
-                    <div class="right">
+                    <div class="block-2">
                         <img class="profile-logo" src="./img/general/profile-logo.png" alt="Profile logo">
                     </div>
                 </div>
