changing navbar and responsiveness

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <header class="container san navbar">
+            <header class="container san">
                 <nav class="navbar">
                     <div class="home-logo">
                         <img class="logo" src="./img/general/logo.PNG" alt="Home logo">
@@ -81,11 +81,6 @@
             </section>
         </div>
 
-        <script type="text/javascript">
-            window.addEventListener("scroll", function(){
-                let header = document.querySelector("header");
-                header.classList.toggle("sticky", window.scrollY > 0);
-            })
-        </script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
