--- a/about.html
+++ b/about.html
@@ -13,34 +13,36 @@
     </head>
     <body>
         <div class="wrapper">
-            <header class="container san navbar">
-                <nav class="my-nav-bar">
+            <header class="container san">
+                <nav class="navbar">
                     <div class="home-logo">
                         <img class="logo" src="./img/general/logo.PNG" alt="Home logo">
                     </div>
-                    <ul class="my-navbar-nav">
-                        <li class="my-nav-link">
-                            <a class="hover" href="./">Home</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover active" href="./about.html">About Me</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover" href="./blogs/general/categories.html">Categories</a>
-                        </li>
-                        <li class="my-nav-link">
-                            <a class="hover" href="./blogs/general/contact.html">Contact</a>
-                        </li>
-                    </ul>
+                    <a href="#" class="navbar-toggle">
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                        <span class="bar"></span>
+                    </a>
+                    <div class="navbar-links">
+                        <ul>
+                            <li class="nav-link">
+                                <a class="hover" href="./">Home</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover active" href="./about.html">About Me</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover" href="./blogs/general/categories.html">Categories</a>
+                            </li>
+                            <li class="nav-link">
+                                <a class="hover" href="./blogs/general/contact.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
             </header>
         </div>
 
-        <script type="text/javascript">
-            window.addEventListener("scroll", function(){
-                let header = document.querySelector("header");
-                header.classList.toggle("sticky", window.scrollY > 0);
-            })
-        </script>
+        <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
