Adding diary picture

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <main class="container">
                 <div class="hero-section">
                     <div class="block-1">
-                        <h1 class="serif large">Welcome to my Diary</h1>
+                        <h1 class="serif large">Welcome at my Diary</h1>
                         <p class="san small">
                             The best way to know about someone is to read his/her Diary!
                             Don't worry I will not bore you too much!
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                     <div class="block-2">
-                        <img class="profile-logo" src="./img/general/profile-logo.png" alt="Profile logo">
+                        <img class="diary-logo" src="./img/general/diary.gif" alt="My Diary Image">
                     </div>
                 </div>
             </main>
