changing paragraph style

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                         <h1 class="serif large">Welcome at my Diary</h1>
                         <p class="san small">
                             The best way to know about someone is to read his/her Diary!
-                            Don't worry I will not bore you too much!
+                            <br>Don't worry I will not bore you too much!
                         </p>
-                        <p class="san small">Here I will try to share my thoughts and learnings in Bangla</p>
+                        <p class="san small">Here I will try to share my thoughts and learnings in Bangla.</p>
                         <div class="button">
                             <a href="./about.html" class="serif small italic">Who am I?</a>
                         </div>
