Adding content on contact and about page

--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -7,9 +7,11 @@
         <link rel="shortcut icon" type="image" href="../../img/general/home-fav-icon.png">
         <link rel="stylesheet" href="../../css/general/style.css">
         <link rel="stylesheet" href="../../css/general/navbar.css">
+        <link rel="stylesheet" href="../../css/general/contact.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="wrapper">
@@ -41,6 +43,29 @@
                     </div>
                 </nav>
             </header>
+            <main class="container contact lora">
+                <h1>Do you want to say something?</h1>
+                <h2>Feel free to reach out me, anywhere!</h2>
+                <div class="options">
+                    <p>I am available on &RightArrow;</p>
+                    <div class="media">
+                        <a href="https://www.linkedin.com/in/hasibull/">
+                            <img class="icon" src="../../img/icon/linkedin.png" alt="">
+                        </a>
+                        <a href="">
+                            <img class="icon" src="../../img/icon/facebook.png" alt="">
+                        </a>
+                        <a href="https://github.com/Hasibull">
+                            <img class="icon" src="../../img/icon/github.png" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="quote">
+                    <blockquote>
+                        <h2>"</h2>
+                    </blockquote>
+                </div>
+            </main>
         </div>
 
         <script type="text/javascript" src="../../js/app.js"></script>
