--- a/about.html
+++ b/about.html
@@ -7,9 +7,11 @@
         <link rel="shortcut icon" type="image" href="./img/general/home-fav-icon.png">
         <link rel="stylesheet" href="./css/general/style.css">
         <link rel="stylesheet" href="./css/general/navbar.css">
+        <link rel="stylesheet" href="./css/general/about.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="wrapper">
@@ -41,8 +43,44 @@
                     </div>
                 </nav>
             </header>
+            <main class="container about-me lora">
+                <h1>I think you already know my name! Do you?</h1>
+                <h2>If no, then sorry for you!</h2>
+                <br>
+                <div class="arrow">
+                    <p>Want to know more?</p>
+                    <img class="down-arrow" src="./img/general/down-arrow.png" alt="arrow">
+                    <p>click on the arrow!</p>
+                </div>
+                <div class="basic-info">
+                    <h1 class="center">Thanks for patients</h1>
+                    <p>I used to describe myself as &RightArrow;</p>
+                    <blockquote>
+                        <h3 class="quote">"Believer, passionate about programming, loves to write and debug code."</h3>
+                    </blockquote>
+                    <br>
+                    <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.
+                    </p>
+                    
+                </div>
+                <div class="qoute-2">
+                    <p></p>
+                </div>
+            </main>
         </div>
 
+        <footer class="footer serif">
+            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+        </footer>
+
         <script type="text/javascript" src="./js/app.js"></script>
+        <script type="text/javascript">
+            let arrow = document.querySelector(".down-arrow");
+            let info = document.querySelector(".basic-info");
+
+            arrow.addEventListener('click', () => {
+                info.classList.toggle('show');
+            })
+        </script>
     </body>
 </html>
