Adding content to contact and about page and changing font style on home page

--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -47,7 +47,7 @@
                 <h1>Do you want to say something?</h1>
                 <h2>Feel free to reach out me, anywhere!</h2>
                 <div class="options">
-                    <p>I am available on &RightArrow;</p>
+                    <p class="small">I am available on &RightArrow;</p>
                     <div class="media">
                         <a href="https://www.linkedin.com/in/hasibull/">
                             <img class="icon" src="../../img/icon/linkedin.png" alt="">
