--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@300;400;500;700;800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@300;400;700;800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,400;1,600&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="wrapper">
@@ -47,12 +48,12 @@
             <main class="container">
                 <div class="hero-section">
                     <div class="block-1">
-                        <h1 class="serif large">Welcome at my Diary</h1>
-                        <p class="san small">
+                        <h1 class="lora large">Welcome at my Diary</h1>
+                        <p class="lora small">
                             The best way to know about someone is to read his/her Diary!
                             Don't worry I will not bore you too much!
                         </p>
-                        <p class="san small">Here I will try to share my thoughts and learnings in Bangla.</p>
+                        <p class="lora small">Here I will try to share my thoughts and learnings in Bangla.</p>
                         <div class="button">
                             <a href="./about.html" class="serif small italic">Who am I?</a>
                         </div>
