--- a/about.html
+++ b/about.html
@@ -44,27 +44,32 @@
                 </nav>
             </header>
             <main class="container about-me lora">
-                <h1>I think you already know my name! Do you?</h1>
-                <h2>If no, then sorry for you!</h2>
+                <h1 class="line">I think you already know my name! Do you?</h1>
+                <h2 class="line mt-2">If no, then sorry for you!</h2>
                 <br>
                 <div class="arrow">
-                    <p>Want to know more?</p>
+                    <p><b>Want to know more?</b></p>
                     <img class="down-arrow" src="./img/general/down-arrow.png" alt="arrow">
-                    <p>click on the arrow!</p>
+                    <p><b>click on the arrow!</b></p>
                 </div>
                 <div class="basic-info">
                     <h1 class="center">Thanks for patients</h1>
-                    <p>I used to describe myself as &RightArrow;</p>
+                    <div class="details center">
+                        <p class="small">If you don't know my name yet &RightArrow; It's me, Hasibul&#128578;</p>
+                        <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.</p>
+                        <p class="small">I have a small dream, "I want to do something to make life better on earth!"</p>
+                        <p class="small">Keep me in your prayer, I will not disappoint you!</p>
+                    </div>
+                    <p class="small">I love to describe myself as &RightArrow;</p>
                     <blockquote>
-                        <h3 class="quote">"Believer, passionate about programming, loves to write and debug code."</h3>
+                        <h2 class="quote">"Believer, passionate about programming, loves to write and debug code."</h2>
                     </blockquote>
-                    <br>
-                    <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.
-                    </p>
                     
                 </div>
-                <div class="qoute-2">
-                    <p></p>
+                <div class="quotes">
+                    <blockquote>
+                        <h2 class="quote">"Don't judge a book by it's cover, but we love to do that!" &#128578;</h2>
+                    </blockquote>
                 </div>
             </main>
         </div>
