changing some style

--- a/blogs/general/categories.html
+++ b/blogs/general/categories.html
@@ -57,6 +57,34 @@
                         <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
                         <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
                     </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
+                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
+                        <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
+                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
+                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
+                    </div>
+                    <div class="category-card">
+                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
+                    </div>
                 </div>
 
             </section>
