--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     </div>
                 </div>
             </main>
-            <section class="container">
+            <section class="container center">
+                <h2 class="lora large">Blog's</h2>
                 <div class="categories">
                     <div class="category-card">
                         <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
@@ -78,7 +79,10 @@
                         <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
                     </div>
                 </div>
-
+                <div class="button">
+                    <a href="./blogs/general/categories.html" class="serif small italic">See more &RightArrow;</a>
+                </div>
+                <div class="mb-4"></div>
             </section>
         </div>
 
