--- a/blogs/general/categories.html
+++ b/blogs/general/categories.html
@@ -89,6 +89,9 @@
 
             </section>
         </div>
+        <footer class="footer serif">
+            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+        </footer>
 
         <script type="text/javascript" src="../../js/app.js"></script>
     </body>
