--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -68,6 +68,10 @@
             </main>
         </div>
 
+        <footer class="footer serif">
+            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+        </footer>
+
         <script type="text/javascript" src="../../js/app.js"></script>
     </body>
 </html>
