--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 <div class="mb-4"></div>
             </section>
         </div>
-
+        <footer class="footer serif">
+            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+        </footer>
         <script type="text/javascript" src="./js/app.js"></script>
     </body>
 </html>
