Adding link to each category and before start content

--- a/blogs/general/categories.html
+++ b/blogs/general/categories.html
@@ -45,46 +45,66 @@
             </header>
             <section class="container">
                 <div class="categories">
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
-                        <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
-                        <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
-                    </div>
+                    <a href="../before-start/">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
+                            <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">গণিতের জগতে</h1>
+                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                            <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ভাষা! যা মানুষের নিকটেও সহজে বোধগম্য!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">ডেটা স্ট্রাকচার</h1>
+                            <p class="san-bangla small">ডেটা স্টোর করার যতো উপায়। যেন পরবর্তীতে ডেটা কে সহজে কাজে লাগানো যায়।</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">অ্যালগরিদম</h1>
+                            <p class="san-bangla small">সমস্যা সমাধানের রেসিপি! ধাপে ধাপে কিভাবে একটি সমস্যা কে সমাধান করা হয়।</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">ডেটা সাইন্স</h1>
+                            <p class="san-bangla small">ডেটা নিয়ে বিজ্ঞান! কিভাবে ডেটাকে কাজে লাগিয়ে বিভিন্ন গুরত্তপূর্ণ সিদ্ধান্ত নেয়া যায়।</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">সি প্রোগ্রামিং</h1>
+                            <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার আরেকটি ভাষা!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">ওয়েব পরিচিতি</h1>
+                            <p class="san-bangla small">ইন্টারনেটের বিশাল জগতে একটুখানি ঘুরাঘুরি!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">আমার যতো ভাবনা!</h1>
+                            <p class="san-bangla small">নিজের মাথাই ঘুরে বেড়ানো হাজারো চিন্তা! হয়তো অদ্ভুত অথবা বিরক্তিকর!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">ওওপি</h1>
+                            <p class="san-bangla small">অবজেক্ট ওরিয়েন্টেড প্রোগ্রামিং। গুছানো উপায়ে ও পরবর্তীতে ব্যাবহার উপযোগী প্রোগ্রাম লেখার পদ্ধতি!</p>
+                        </div>
+                    </a>
                 </div>
 
             </section>
