Adding underline under my name

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 <div class="basic-info">
                     <h1 class="center">Thanks for patients</h1>
                     <div class="details center">
-                        <p class="small">If you don't know my name yet &RightArrow; It's me, Hasibul&#128578;</p>
+                        <p class="small">If you don't know my name yet &RightArrow; It's me, <b class="line">Hasibul</b>&#128578;</p>
                         <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.</p>
                         <p class="small">I have a small dream, "I want to do something to make life better on earth!"</p>
                         <p class="small">Keep me in your prayer, I will not disappoint you!</p>
@@ -72,7 +72,7 @@
         <footer class="footer serif">
             <div class="quotes">
                 <blockquote>
-                    <h2 class="quote">"Don't judge a book by it's cover, but we love to do that!" &#128578;</h2>
+                    <h2 class="quote lora">"Don't judge a book by it's cover, but we love to do that!" &#128578;</h2>
                 </blockquote>
             </div>
             <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
