Aligning text center

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
                     </div>
                 </nav>
             </header>
-            <main class="container about-me lora">
+            <main class="container about-me lora text-center">
                 <h1 class="line">I think you already know my name! Do you?</h1>
                 <h2 class="line mt-2">If no, then sorry for you!</h2>
                 <br>
