--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -43,7 +43,7 @@
                     </div>
                 </nav>
             </header>
-            <main class="container contact lora">
+            <main class="container contact lora text-center">
                 <h1>Do you want to say something?</h1>
                 <h2>Feel free to reach out me, anywhere!</h2>
                 <div class="options">
