--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
                         <p class="small">I have a small dream, "I want to do something to make life better on earth!"</p>
                         <p class="small">Keep me in your prayer, I will not disappoint you!</p>
                     </div>
-                    <p class="small">I love to describe myself as &RightArrow;</p>
+                    <p class="small text-left">I love to describe myself as &RightArrow;</p>
                     <blockquote>
                         <h2 class="quote">"Believer, passionate about programming, loves to write and debug code."</h2>
                     </blockquote>
