--- a/index.html
+++ b/index.html
@@ -66,18 +66,24 @@
             <section class="container center">
                 <h2 class="lora large">Blog's</h2>
                 <div class="categories">
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
-                        <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                        <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
-                    </div>
-                    <div class="category-card">
-                        <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
-                        <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
-                    </div>
+                    <a href="./blogs/before-start/">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">প্রোগ্রামিং শুরুর আগে</h1>
+                            <p class="san-bangla small">প্রোগ্রামিং এর জগতে পা দেয়ার আগে আমাদের সবারই উচিত কিছু বিষয়ে জেনে নেয়া</p>
+                        </div>
+                    </a>
+                    <a href="./blogs/math/">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">গণিতের জগতে</h1>
+                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে কেউ একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
+                        </div>
+                    </a>
+                    <a href="">
+                        <div class="category-card">
+                            <h1 class="san-bangla medium">পাইথন প্রোগ্রামিং</h1>
+                            <p class="san-bangla small">কম্পিউটারের সাথে কথা বলার ও মানুষের সহজে বোধগম্য একটি প্রোগ্রামিং ভাষা!!</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="button">
                     <a href="./blogs/general/categories.html" class="serif small italic">See more &RightArrow;</a>
