--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
                     <p><b>click on the arrow!</b></p>
                 </div>
                 <div class="basic-info">
-                    <h1 class="center">Thanks for patients</h1>
+                    <h1 class="center">Thanks for your patients</h1>
                     <div class="details center">
                         <p class="small">If you don't know my name yet &RightArrow; It's me, <b class="line">Hasibul</b>&#128578;</p>
                         <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.</p>
