--- a/about.html
+++ b/about.html
@@ -75,7 +75,7 @@
                     <h2 class="quote lora">"Don't judge a book by it's cover, but we love to do that!" &#128578;</h2>
                 </blockquote>
             </div>
-            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+            <p class="text-center">Copyright &copy; Hasibul's Diary , All rights reserved.</p>
         </footer>
 
         <script type="text/javascript" src="./js/app.js"></script>
