--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </section>
         </div>
         <footer class="footer serif">
-            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+            <p class="text-center">Copyright &copy; Hasibul's Diary , All rights reserved.</p>
         </footer>
         <script type="text/javascript" src="./js/app.js"></script>
     </body>
