--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -69,7 +69,7 @@
         </div>
 
         <footer class="footer serif">
-            <p>Copyright &copy; Hasibul's Diary , All rights reserved.</p>
+            <p class="text-center">Copyright &copy; Hasibul's Diary , All rights reserved.</p>
         </footer>
 
         <script type="text/javascript" src="../../js/app.js"></script>
