--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                 </nav>
             </header>
             <main class="container about-me lora text-center">
-                <h1 class="line">I think you already know my name! Do you?</h1>
+                <h1 class="line">I think, you got my name already! Do you?</h1>
                 <h2 class="line mt-2">If no, then sorry for you!</h2>
                 <br>
                 <div class="arrow">
@@ -58,7 +58,7 @@
                         <p class="small">If you don't know my name yet &RightArrow; It's me, <b class="line">Hasibul</b>&#128578;</p>
                         <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.</p>
                         <p class="small">I have a small dream, "I want to do something to make life better on earth!"</p>
-                        <p class="small">Keep me in your prayer, I will not disappoint you!</p>
+                        <p class="small">Keep me in your prayer. </p>
                     </div>
                     <p class="small text-left">I love to describe myself as &RightArrow;</p>
                     <blockquote>
@@ -80,7 +80,7 @@
 
         <script type="text/javascript" src="./js/app.js"></script>
         <script type="text/javascript">
-            let arrow = document.querySelector(".down-arrow");
+            let arrow = document.querySelector(".arrow");
             let info = document.querySelector(".basic-info");
 
             arrow.addEventListener('click', () => {
