Changing contact page sentence

--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -44,7 +44,7 @@
                 </nav>
             </header>
             <main class="container contact lora text-center">
-                <h1>Do you want to say something?</h1>
+                <h1>I would love to hear from you,</h1>
                 <h2>Feel free to reach out me, anywhere!</h2>
                 <div class="options">
                     <p class="small">I am available on &RightArrow;</p>
