Correcting categories spelling mistakes

--- a/blogs/general/categories.html
+++ b/blogs/general/categories.html
@@ -54,7 +54,7 @@
                     <a href="">
                         <div class="category-card">
                             <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেরেছে সে তার মহে পেরেছে!!</p>
+                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
                         </div>
                     </a>
                     <a href="">
