--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <a href="./blogs/math/">
                         <div class="category-card">
                             <h1 class="san-bangla medium">গণিতের জগতে</h1>
-                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে কেউ একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
+                            <p class="san-bangla small">এ যেন এক ভয়ংকর সুন্দর জগত! যে একবার এই জগতের সৌন্দর্য উপভোগ করতে পেড়েছে সে তার মোহে পড়েছে!!</p>
                         </div>
                     </a>
                     <a href="">
