--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <header class="container san">
                 <nav class="navbar">
                     <div class="home-logo">
-                        <img class="logo" src="./img/general/logo.PNG" alt="Home logo">
+                        <img class="logo" src="./img/general/profile-logo.png" alt="Home logo">
                     </div>
                     <a href="#" class="navbar-toggle">
                         <span class="bar"></span>
