adding link to the logo

--- a/about.html
+++ b/about.html
@@ -18,7 +18,9 @@
             <header class="container san">
                 <nav class="navbar">
                     <div class="home-logo">
-                        <img class="logo" src="./img/general/profile-logo.png" alt="Home logo">
+                        <a href="./">
+                            <img class="logo" src="./img/general/profile-logo.png" alt="Home logo">
+                        </a>
                     </div>
                     <a href="#" class="navbar-toggle">
                         <span class="bar"></span>
