--- a/about.html
+++ b/about.html
@@ -46,18 +46,20 @@
                 </nav>
             </header>
             <main class="container about-me lora text-center">
-                <h1 class="line">I think, you got my name already! Do you?</h1>
-                <h2 class="line mt-2">If no, then sorry for you!</h2>
+                <h1>I think, you got my name already! Do you?
+                    <img src = "https://github.com/0xAbdulKhalid/0xAbdulKhalid/raw/main/assets/mdImages/about_me.gif" width = 30px>
+                </h1>
+                <h2 class="mt-1">If no, then sorry for you! &#128522;</h2>
                 <br>
                 <div class="arrow">
                     <p><b>Want to know more?</b></p>
-                    <img class="down-arrow" src="./img/general/down-arrow.png" alt="arrow">
+                    <img class="down-arrow" src="./img/general/down-arrow.gif" alt="arrow">
                     <p><b>click on the arrow!</b></p>
                 </div>
                 <div class="basic-info">
                     <h1 class="center">Thanks for your patients</h1>
                     <div class="details center">
-                        <p class="small">If you don't know my name yet &RightArrow; It's me, <b class="line">Hasibul</b>&#128578;</p>
+                        <p class="small">If you don't get my name yet &RightArrow; It's me, <b class="line">Hasibul</b>&#128578;</p>
                         <p class="small">Currently I'm doing my undergraduate in ECE at HSTU.</p>
                         <p class="small">I have a small dream, "I want to do something to make life better on earth!"</p>
                         <p class="small">Keep me in your prayer. </p>
