Change the blog section style in the home page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
             </main>
-            <section class="container center">
+            <section class="container blog-section center">
                 <h2 class="lora large">Blog's</h2>
                 <div class="categories">
                     <a href="./blogs/before-start/">
