Contact me page: removed facebook, added mail to option

--- a/blogs/general/contact.html
+++ b/blogs/general/contact.html
@@ -52,20 +52,15 @@
                     <p class="small">I am available on &RightArrow;</p>
                     <div class="media">
                         <a href="https://www.linkedin.com/in/hasibull/">
-                            <img class="icon" src="../../img/icon/linkedin.png" alt="">
+                            <img class="icon" src="../../img/icon/linkedin.png" alt="Linkedin">
                         </a>
-                        <a href="https://www.facebook.com/mohammadhasibulislam.islam.7">
-                            <img class="icon" src="../../img/icon/facebook.png" alt="">
+                        <a href="mailto:hasibul.sbn@gmail.com">
+                            <img class="icon" src="../../img/icon/email.png" alt="mail">
                         </a>
                         <a href="https://github.com/Hasibull">
-                            <img class="icon" src="../../img/icon/github.png" alt="">
+                            <img class="icon" src="../../img/icon/github.png" alt="Github">
                         </a>
                     </div>
-                </div>
-                <div class="quote">
-                    <blockquote>
-                        <h2>"</h2>
-                    </blockquote>
                 </div>
             </main>
         </div>
